--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                         </section>
                         <div class="side-border"></div>
                         <section class="navicons-col">
-                            <a href="#donate"><img src="/static/images/cosmic-logo.svg" alt="donate"><p>About Us</p></a>
+                            <a href="https://github.com/harshavardhan-md/Sharity/blob/main/README.md"><img src="/static/images/cosmic-logo.svg" alt="donate"><p>About Us</p></a>
                             
                         </section>
                         <div class="side-border"></div>
