--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -21,7 +21,7 @@
         </p>
       </div>
 
-      <h1>Thank You for Your Donation!</h1>
+<!--       <h1>Thank You for Your Donation!</h1>
     
       {% if ashram %}
       <div class="ashram-details">
@@ -33,7 +33,7 @@
       </div>
   {% else %}
       <p>{{ message }}</p>
-  {% endif %}
+  {% endif %} -->
       
     <script>
         document.getElementById("getDirectionsButton").addEventListener("click", function() {
